# IM2DeepTrainer

./: .gitignore  MANIFEST.in  __main__.py  extract_data.py  model.py  pyproject.toml
.github/workflows/: publish.yml
im2deeptrainer/: __init__.py  __main__.py  aa_mol_desc_feats.csv  aa_mol_desc_feats_filtered.csv  evaluate.py  exceptions.py  extract_data.py  model.py  train.py  utils.py
im2deeptrainer/package_data/: aa_mol_desc_feats_filtered_and_removed.csv
